name:                happy-numbers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/8BitMate/happy-numbers#readme
license:             BSD3
license-file:        LICENSE
author:              Asbjørn Gaarde
maintainer:          asbjorn_gaarde@hotmail.com
copyright:           2018 Asbjørn Gaarde
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable happy-numbers
  hs-source-dirs:      src
  ghc-options:         -O
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers
